# book_scareglia

./: BookingAgentWorkflowDocumentation.txt  Dockerfile  checkprivileges.py  pyproject.toml  start.py
booking-agent/: .gitignore  agent.py  agent_tools.py  app.py  artifacts.py  auth.py  booking_dialogs.py  bookings.py  calendar_browser.py  config.py  google_sheets.py  layout.py  mailer.py  requirements.txt  seed_test_data.py  travel_reports.py  ui_components.py  users.py
booking-agent/views/: agent_view.py  bookings_view.py  calendar_view.py  cancel_booking_view.py  connection_view.py  create_booking_view.py  my_bookings_view.py  profile_view.py  users_view.py
